...
            "state": "translated",
            "value": "Добавьте первую запись"
          }
        }
      }
    },
    "Fuel, service or any other expense – scan the receipt or type it in.": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Fuel, service or any other expense – scan the receipt or type it in."
...
            "state": "translated",
            "value": "Не импортируется"
          }
        }
      }
    },
    "Note": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Note"
...
